--- a/thermo/10.Example 1.ipynb
+++ b/thermo/10.Example 1.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity=\"all\"\n",
+    "import pint as pu\n",
+    "ureg=pu.UnitRegistry()\n",
+    "UNIT=ureg.Quantity"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -11,36 +28,7 @@
     "A Carnot heat engine receives $500 kJ$ of heat per cycle from a high temperature source at $652^\\circ C$ and rejects heat to a low temperature sink at $30^\\circ C$.\n",
     "### Required:\n",
     "Determine the thermal efficiency of this Carnot engine and the amount of heat rejected to the sink per cycle.\n",
-    "### Solution:\n",
-    "Interactive mode is turned on so that values are automatically displayed. This is shown below."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity=\"all\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Any libraries that are needed are imported below. The unit registry is also created."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pint as pu\n",
-    "ureg=pu.UnitRegistry()\n",
-    "UNIT=ureg.Quantity"
+    "### Solution:"
    ]
   },
   {
@@ -52,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +71,7 @@
        "925.15 <Unit('kelvin')>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -99,7 +87,7 @@
        "303.15 <Unit('kelvin')>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +117,7 @@
        "'67.2%'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +149,7 @@
        "'163.8 kilojoule'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,6 +161,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
