--- a/thermo/10.Example 1.ipynb
+++ b/thermo/10.Example 1.ipynb
@@ -3,17 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "tags": [
-     "remove_cell"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "InteractiveShell.ast_node_interactivity=\"all\"\n",
-    "import pint as pu\n",
-    "ureg=pu.UnitRegistry()\n",
+    "import pint\n",
+    "ureg=pint.UnitRegistry()\n",
     "UNIT=ureg.Quantity"
    ]
   },
@@ -161,7 +157,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Tags",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
