--- a/thermo/10.Example 2.ipynb
+++ b/thermo/10.Example 2.ipynb
@@ -1,46 +1,30 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# ENGT 222 - Chapter 6.7-6.11\n",
-    "***\n",
-    "## <u>Example 2</u>\n",
-    "### Given:\n",
-    "A Carnot refrigeration cycle is executed in a closed system in the saturated liquid-vapor mixture region using $0.8 kg$ of R-134a as the working fluid. The maximum and minimum temperatures in the cycle are $20^\\circ C$ and $-8^\\circ C$, respectively. It is known that R-134a is a saturated liquid at the end of the heat rejection process, and the net work input to the cycle is $15 kJ$.\n",
-    "### Required:\n",
-    "Determine the mass that vaporizes during the heat addition process and the pressure at the end of the heat rejection process.\n",
-    "### Solution:\n",
-    "Interactive mode is turned on so that values are automatically displayed. This is shown below."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity=\"all\""
+    "InteractiveShell.ast_node_interactivity=\"all\"\n",
+    "import pint as pu\n",
+    "ureg=pu.UnitRegistry()\n",
+    "UNIT=ureg.Quantity"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Any libraries that are needed are imported below. The unit registry is also created."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pint as pu\n",
-    "ureg=pu.UnitRegistry()\n",
-    "UNIT=ureg.Quantity"
+    "# Thermodynamics - Chapter 6.7-6.11\n",
+    "***\n",
+    "## <u>Example 2</u>\n",
+    "### Given:\n",
+    "A Carnot refrigeration cycle is executed in a closed system in the saturated liquid-vapor mixture region using $0.8 kg$ of R-134a as the working fluid. The maximum and minimum temperatures in the cycle are $20^\\circ C$ and $-8^\\circ C$, respectively. It is known that R-134a is a saturated liquid at the end of the heat rejection process, and the net work input to the cycle is $15 kJ$.\n",
+    "### Required:\n",
+    "Determine the mass that vaporizes during the heat addition process and the pressure at the end of the heat rejection process.\n",
+    "### Solution:"
    ]
   },
   {
@@ -52,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +51,7 @@
        "293.15 <Unit('kelvin')>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -83,7 +67,7 @@
        "265.15 <Unit('kelvin')>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +113,7 @@
        "'9.47'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +141,7 @@
        "'142.0 kilojoule'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,23 +176,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'0.6945 kilogram'"
+       "'***'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'m_vap=0.6945 kilogram'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'***'"
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "m_vap=Q_Lrev/h_fg\n",
-    "'{:.4f}'.format(m_vap)"
+    "'***'\n",
+    "'m_vap={:.4f}'.format(m_vap)\n",
+    "'***'"
    ]
   },
   {
@@ -220,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,6 +238,49 @@
    "metadata": {},
    "source": [
     "Thus the temperature at the end of the heat rejection process is\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'***'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'P4=572.07 kilopascal'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'***'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P4=Psat\n",
+    "'***'\n",
+    "'P4={:.2f}'.format(P4)\n",
+    "'***'"
    ]
   }
  ],
