--- a/Raspberry Pi Primer.ipynb
+++ b/Raspberry Pi Primer.ipynb
@@ -35,7 +35,7 @@
     "## Prerequisites:\n",
     "* Raspbian [ZIP file](https://www.raspberrypi.org/downloads/raspbian/)\n",
     "* [balenaEtcher](https://www.balena.io/etcher/)\n",
-    "* &gt; 8GB microSD card\n",
+    "* &ge; 8GB microSD card\n",
     "* microSD card reader (microSD to USB or microSD to SD adapter)\n",
     "\n",
     "The OS that the Pi uses is called Raspbian and is a fork from the [Debian](https://www.debian.org/) Linux distribution (Raspberry + Debian = Raspbian). On the Raspbian download page, there are 3 options of download\n",
@@ -48,7 +48,7 @@
     "While the Raspbian ZIP file is downloading, you can download Etcher. Etcher is an image file writer. The zip file that you download is a compressed version of what is called an image file. An image file is \"copy\" of all the files necessary for the OS to work properly. There is more to an image file than simply copying the files from one place to another but that is basically the idea. Etcher handles the \"copying\" of the image file correctly. To use Etcher, you need to first point it to the location of the Raspbian ZIP file (you'll have to wait until the Raspbian ZIP file has downloaded completely) then you tell Etcher what drive you want it to write the image file to. If your microSD is not plugged into your computer, do so now then in Etcher select the microSD card. Make sure not to select your Windows hard drive or another USB drive. When Etcher writes the image file to the microSD card, it will erase any information on the microSD card first. So if you accidentally selected your Windows hard drive, you will [brick](https://en.wikipedia.org/wiki/Brick_(electronics)) your laptop. Etcher takes a little while to write the image file to the microSD. Once Etcher is done, Windows might prompt you to format the microSD card. Do not format the microSD card. Etcher will create 2 partitions on the microSD card, `boot` and `rootfs`. Windows will be able to read the `boot` partition but will not be able to read the `rootfs`. Windows will want to try to reformat the `rootfs` partition because Windows thinks its corrupt. It's not so don't. If the `boot` partition does not appear under This PC in your File Explorer, unplug the microSD card from your computer and plug it back in again. You should see a drive called `boot`. At this point, a decision about how you will access the Pi must be made.\n",
     "\n",
     "---\n",
-    "# Raspberry Pi Access (WIP)\n",
+    "# Raspberry Pi Access and Initial Configuration (WIP)\n",
     "There are several different options to access the Pi.\n",
     "\n",
     "## Option 1 - Mouse and Keyboard\n",
@@ -60,18 +60,30 @@
     "\n",
     "This is by far the simplest but can be limiting in certain situations. It requires that you have the DE installed.\n",
     "\n",
-    "## Option 2 - Remote access\n",
+    "## Option 2 - Remote access for Raspberry Pi Zero\n",
     "### Requirements:\n",
     "* [PuTTY](https://www.chiark.greenend.org.uk/~sgtatham/putty/latest.html) SSH (Secure Shell) Client\n",
     "* [Bonjour](https://support.apple.com/kb/DL999?locale=en_US) print sever\n",
     "* [VNC Client](https://www.realvnc.com/en/connect/download/viewer/windows/) (optional)\n",
-    "* USB or ethernet cable (optional, kind of)\n",
+    "* USB cable (optional, kind of)\n",
     "\n",
     "Follow at least steps 1 through 9 for [this](https://desertbot.io/blog/headless-pi-zero-ssh-access-over-usb-windows) tutorial.\n",
     "[This](http://www.circuitbasics.com/raspberry-pi-zero-ethernet-gadget/) tutorial might be better. I'm having trouble with getting SSH over USB to work.\n",
     "\n",
+    "## Option 3 - Remote access for Raspberry Pi Model A and B\n",
+    "### Requirements:\n",
+    "* [PuTTY](https://www.chiark.greenend.org.uk/~sgtatham/putty/latest.html) SSH (Secure Shell) Client\n",
+    "* [Bonjour](https://support.apple.com/kb/DL999?locale=en_US) print sever\n",
+    "* [VNC Client](https://www.realvnc.com/en/connect/download/viewer/windows/) (optional)\n",
+    "* Ethernet cable (optional, kind of)\n",
+    "\n",
+    "Follow the first part of [this](https://www.makeuseof.com/tag/directly-connect-raspberry-pi-without-internet/) tutorial (the ethernet power).\n",
+    "\n",
     "FTP\n",
     "[Filezilla](https://filezilla-project.org/download.php?type=client)\n",
+    "\n",
+    "Raspi-config\n",
+    "[raspi-config](https://www.raspberrypi.org/documentation/configuration/raspi-config.md)\n",
     "\n",
     "---\n",
     "# Linux Command Line Interface Usage\n",
